# SUSTechPOINTS

./: .gitignore  README.md  README_cn.md  README_guide.md  centre_pcd.py  create_labels.html  dataset.py  file_tools.py  gen_traj.py  gentoken.py  go-icp.prototxt  index.html  labels.json  main.py  notes.md  operations.md  package.json  prepare_all.py  prepare_pcd.py  registration_demo.html  requirement.txt  rural_labels.json  scene_reader.py  server.conf  tag.py  test_icon.html  test_ml.html  todo.md  urban_labels.json  uwsgi.ini  view.html
Docker/: Dockerfile  run.sh
algos/: pre_annotate.py  rotation.py  trajectory.py  util.py
calibpy/: pnp.py
conf/: auth.conf  auth.conf.example  server.conf  server.conf.example  user.conf.example
doc/: data-format.md  deploy_server.md  docker.md  install_from_source.md  operations.md  shortcuts_cn.md  webgl_grpah.md
pointnet/: predict.py
public/: index.html
src/: App.jsx  App.tsx  index.css  index.tsx
tools/: adjust_ego_pose.py  beautify_json.py  check_fusion_labels.py  check_labels.py  color_points.py  combine-lidar-camera.py  convert_to_kitti.py  correct_attr.py  dump_obj_size.py  export_pos.py  extract_obj_painted.py  extract_objects.py  find_empty_labels.py  format_labels.py  fuse-lidar-camera.py  gen2dboxby3dbox.py  generate_yolo_dataset.py  import-nuscenes.py  label2yolo.py  mark_annotator_for_2d_label.py  obj_dump.py  obj_stat.py  pre-cluster.py  scan_label.py  stat.py  (+9 more)
tools/dataset_preprocess/pcd_restore/: CMakeLists.txt  pcd_restore.cpp
tools/lidar_camera_fusion/: CMakeLists.txt  fuse_lidar_camera.cpp
(+151 files in other folders)
